@@ -3,48 +3,61 @@ package com.intellij.testFramework;
 
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.PathManager;
-import com.intellij.openapi.diagnostic.JulLogger;
-import com.intellij.openapi.diagnostic.LogLevel;
-import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.diagnostic.*;
 import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.LineTokenizer;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.util.SystemProperties;
+import com.intellij.util.ExceptionUtil;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.WeakList;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.AssumptionViolatedException;
+import org.junit.ComparisonFailure;
 import org.junit.rules.TestRule;
 import org.junit.rules.TestWatcher;
 import org.junit.runner.Description;
 
 import java.io.*;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
+import java.util.logging.Level;
 import java.util.logging.LogManager;
-import java.util.regex.Matcher;
+import java.util.logging.StreamHandler;
 import java.util.regex.Pattern;
 
 import static com.intellij.openapi.application.PathManager.PROPERTY_LOG_PATH;
+import static java.util.Objects.requireNonNullElse;
 
 @SuppressWarnings({"CallToPrintStackTrace", "UseOfSystemOutOrSystemErr"})
 public final class TestLoggerFactory implements Logger.Factory {
-  /**
-   * If property is {@code true}, saves full test log to a separate file, instead of flushing it in the stdout (buildlog on TC)
-   */
-  private static final String SPLIT_TEST_LOGS_KEY = "idea.split.test.logs";
+  @SuppressWarnings("SpellCheckingInspection") private static final String LOG_DIR = "testlog";
+  private static final String LOG_FILE_NAME = "idea.log";
   private static final String SPLIT_LOGS_SUBDIR = "splitTestLogs";
-  private static boolean SPLIT_TEST_LOGS = SystemProperties.getBooleanProperty(SPLIT_TEST_LOGS_KEY, false);
-  private static final String LOG_DIR = "testlog";
+
   private static final long LOG_SIZE_LIMIT = 100 * 1024 * 1024;
   private static final long LOG_SEEK_WINDOW = 100 * 1024;
 
+  private static final char FAILED_TEST_DEBUG_OUTPUT_MARKER = '\u2003';  // used in `FailedTestDebugLogConsoleFolding#shouldFoldLine`
+  private static final int MAX_BUFFER_LENGTH = 10_000_000;
+
+  private final StringBuilder myBuffer = new StringBuilder();
+  private long myTestStartedMillis;
   private boolean myInitialized;
+  // when {@code true}, logs produced during a failed test are saved to a separate file instead of being dumped to the stdout
+  private boolean mySplitTestLogs = Boolean.getBoolean("idea.split.test.logs");
 
   private TestLoggerFactory() { }
+
+  private static @Nullable TestLoggerFactory getTestLoggerFactory() {
+    Logger.Factory factory = Logger.getFactory();
+    return factory instanceof TestLoggerFactory ? (TestLoggerFactory)factory : null;
+  }
 
   @Override
   public synchronized @NotNull Logger getLoggerInstance(@NotNull String category) {
@@ -52,33 +65,41 @@ public final class TestLoggerFactory implements Logger.Factory {
       myInitialized = true;
     }
 
-    return new TestLogger(category);
+    java.util.logging.Logger julLogger = java.util.logging.Logger.getLogger(category);
+    configureLogToStdoutIfDebug(julLogger);
+    return new TestLogger(julLogger, this);
   }
 
   /**
-   * @return true iff logs for each test should be saved separately
+   * If the logger has the "FINE" level, add a LogToStdoutJulHandler that streams its log records
+   * to STDOUT with a timestamp relative to the test started timestamp.
    */
-  static boolean shouldSplitTestLogs() {
-    return SPLIT_TEST_LOGS;
+  private static void configureLogToStdoutIfDebug(@NotNull java.util.logging.Logger julLogger) {
+    if (julLogger.isLoggable(Level.FINE) &&
+        ContainerUtil.findInstance(julLogger.getHandlers(), LogToStdoutJulHandler.class) == null) {
+      julLogger.addHandler(new LogToStdoutJulHandler());
+    }
   }
 
   public static boolean reconfigure() {
     try {
-      String customConfigPath = System.getProperty(PathManager.PROPERTY_LOG_CONFIG_FILE);
-      Path logProperties = customConfigPath != null
-                        ? Paths.get(customConfigPath)
-                        : Paths.get(PathManager.getHomePath(), "test-log.properties");
+      var customConfigPath = System.getProperty(PathManager.PROPERTY_LOG_CONFIG_FILE);
+      var logProperties = customConfigPath != null ? Path.of(customConfigPath)
+                                                   : Path.of(PathManager.getHomePath(), "test-log.properties");
       if (Files.exists(logProperties)) {
-        try (final InputStream in = Files.newInputStream(logProperties)) {
-          final BufferedInputStream bin = new BufferedInputStream(in);
-          LogManager.getLogManager().readConfiguration(bin);
+        if (customConfigPath != null) System.out.println("Configuring j.u.l.LogManager from file: " + logProperties);
+        try (InputStream in = new BufferedInputStream(Files.newInputStream(logProperties))) {
+          LogManager.getLogManager().readConfiguration(in);
         }
       }
+      else {
+        System.err.println("Configuration file for j.u.l.LogManager does not exist: " + logProperties);
+      }
 
-      Path logDir = getTestLogDir();
+      var logDir = getTestLogDir();
       Files.createDirectories(logDir);
 
-      Path logFile = logDir.resolve("idea.log");
+      var logFile = logDir.resolve(LOG_FILE_NAME);
       JulLogger.clearHandlers();
       JulLogger.configureLogFileAndConsole(logFile, false, false, true, null);
 
@@ -95,22 +116,22 @@ public final class TestLoggerFactory implements Logger.Factory {
   }
 
   public static @NotNull Path getTestLogDir() {
-    String property = System.getProperty(PROPERTY_LOG_PATH);
-    return property == null ? Path.of(PathManager.getSystemPath(), LOG_DIR) : Path.of(property);
+    var property = System.getProperty(PROPERTY_LOG_PATH);
+    return property != null ? Path.of(property) : Path.of(PathManager.getSystemPath(), LOG_DIR);
   }
 
   public static void dumpLogToStdout(@NotNull String testStartMarker) {
-    Path logFile = getTestLogDir().resolve("idea.log");
+    var logFile = getTestLogDir().resolve(LOG_FILE_NAME);
     if (Files.exists(logFile)) {
       try {
-        long length = Files.size(logFile);
+        var length = Files.size(logFile);
         String logText;
 
         if (length > LOG_SEEK_WINDOW) {
-          try (RandomAccessFile file = new RandomAccessFile(logFile.toFile(), "r")) {
+          try (var file = new RandomAccessFile(logFile.toFile(), "r")) {
             file.seek(length - LOG_SEEK_WINDOW);
-            byte[] bytes = new byte[(int)LOG_SEEK_WINDOW];
-            int read = file.read(bytes);
+            var bytes = new byte[(int)LOG_SEEK_WINDOW];
+            var read = file.read(bytes);
             logText = new String(bytes, 0, read, StandardCharsets.UTF_8);
           }
         }
@@ -119,10 +140,10 @@ public final class TestLoggerFactory implements Logger.Factory {
         }
 
         System.out.println("\n\nIdea Log:");
-        Pattern logStart = Pattern.compile("[\\d\\-, :\\[\\]]+(DEBUG|INFO|ERROR) - ");
-        for (String line : StringUtil.splitByLines(logText.substring(Math.max(0, logText.lastIndexOf(testStartMarker))))) {
-          Matcher matcher = logStart.matcher(line);
-          int lineStart = matcher.lookingAt() ? matcher.end() : 0;
+        var logStart = Pattern.compile("[\\d\\-, :\\[\\]]+(DEBUG|INFO|ERROR) - ");
+        for (var line : StringUtil.splitByLines(logText.substring(Math.max(0, logText.lastIndexOf(testStartMarker))))) {
+          var matcher = logStart.matcher(line);
+          var lineStart = matcher.lookingAt() ? matcher.end() : 0;
           System.out.println(line.substring(lineStart));
         }
       }
@@ -133,8 +154,8 @@ public final class TestLoggerFactory implements Logger.Factory {
   }
 
   public static void enableDebugLogging(@NotNull Disposable parentDisposable, String @NotNull ... categories) {
-    for (String category : categories) {
-      Logger logger = Logger.getInstance(category);
+    for (var category : categories) {
+      var logger = Logger.getInstance(category);
       if (!logger.isDebugEnabled()) {
         logger.setLevel(LogLevel.DEBUG);
         Disposer.register(parentDisposable, () -> logger.setLevel(LogLevel.INFO));
@@ -142,15 +163,11 @@ public final class TestLoggerFactory implements Logger.Factory {
     }
   }
 
-  private static final char FAILED_TEST_DEBUG_OUTPUT_MARKER = '\u2003';  // used in `FailedTestDebugLogConsoleFolding#shouldFoldLine`
-  private static final StringBuilder BUFFER = new StringBuilder();
-  private static final int MAX_BUFFER_LENGTH = 10_000_000;
+  private void buffer(LogLevel level, String category, @Nullable String message, @Nullable Throwable t) {
+    var writer = new StringWriter(t == null ? 256 : 4096);
 
-  static void log(@NotNull String level, @NotNull String category, @Nullable String message, @Nullable Throwable t) {
-    StringWriter writer = new StringWriter(t == null ? 256 : 4096);
-
-    String source = category.substring(Math.max(category.length() - 30, 0));
-    writer.write(String.format("%1$tH:%1$tM:%1$tS,%1$tL %2$-5s %3$30s - ", System.currentTimeMillis(), level, source));
+    var source = category.substring(Math.max(category.length() - 30, 0));
+    writer.write(String.format("%1$tH:%1$tM:%1$tS,%1$tL %2$-6s %3$30s - ", System.currentTimeMillis(), level.getLevelName(), source));
     writer.write(message != null ? message : "");
     writer.write(System.lineSeparator());
     if (t != null) {
@@ -158,44 +175,70 @@ public final class TestLoggerFactory implements Logger.Factory {
       writer.write(System.lineSeparator());
     }
 
-    synchronized (BUFFER) {
-      BUFFER.append(writer.getBuffer());
-      if (BUFFER.length() > MAX_BUFFER_LENGTH) {
-        BUFFER.delete(0, BUFFER.length() - MAX_BUFFER_LENGTH + MAX_BUFFER_LENGTH / 4);
+    synchronized (myBuffer) {
+      myBuffer.append(writer.getBuffer());
+      if (myBuffer.length() > MAX_BUFFER_LENGTH) {
+        myBuffer.delete(0, myBuffer.length() - MAX_BUFFER_LENGTH + MAX_BUFFER_LENGTH / 4);
       }
     }
   }
 
-  public static void onTestStarted() {
-    // clear buffer from tests which failed to report their termination properly
-    synchronized (BUFFER) {
-      BUFFER.setLength(0);
-    }
+  /**
+   * Report full contents, not limited to 20 characters of ComparisonFailure#MAX_CONTEXT_LENGTH
+   */
+  @Nullable
+  private static String dumpComparisonFailures(@Nullable Throwable t) {
+    if (t == null) return null;
+
+    StringBuilder sb = new StringBuilder();
+    ExceptionUtil.findCauseAndSuppressed(t, ComparisonFailure.class).forEach(e -> {
+      logComparisonFailure(sb,
+                           e.getExpected(),
+                           e.getActual());
+    });
+
+    ExceptionUtil.findCauseAndSuppressed(t, junit.framework.ComparisonFailure.class).forEach(e -> {
+      logComparisonFailure(sb,
+                           e.getExpected(),
+                           e.getActual());
+    });
+
+    return sb.length() != 0 ? sb.toString() : null;
   }
 
-  private static @NotNull String saveSplitLog(@NotNull String testName, @NotNull String buffer) {
-    var logsDir = getTestLogDir().resolve(SPLIT_LOGS_SUBDIR);
-    try {
-      Files.createDirectories(logsDir);
-    }
-    catch (IOException e) {
-      buffer += "\nUnable to create dir for split logs, disabling splitting: " + logsDir;
-      SPLIT_TEST_LOGS = false;
-      return buffer;
-    }
+  private static void logComparisonFailure(@NotNull StringBuilder sb, @Nullable String expected, @Nullable String actual) {
+    if (expected == null && actual == null) return;
 
-    var testFileName = FileUtil.sanitizeFileName(testName);
-    var logFile = FileUtil.findSequentNonexistentFile(logsDir.toFile(), testFileName, "log");
+    sb.append("Comparison Failure");
+    sb.append(System.lineSeparator());
 
-    try (var writer = new BufferedWriter(new FileWriter(logFile, StandardCharsets.UTF_8))) {
-      writer.write(buffer);
+    if (actual == null) {
+      sb.append("Actual [null]");
     }
-    catch (IOException e) {
-      buffer += "\nError writing split log, disabling splitting: " + logFile + "\n" + e;
-      SPLIT_TEST_LOGS = false;
-      return buffer;
+    else {
+      sb.append("Actual [[");
+      sb.append(actual);
+      sb.append("]]");
     }
-    return "Log saved to: " + logFile.getName() + " (" + logFile + ")";
+    sb.append(System.lineSeparator());
+
+    if (expected == null) {
+      sb.append("Expected [null]");
+    }
+    else {
+      sb.append("Expected [[");
+      sb.append(expected);
+      sb.append("]]");
+    }
+    sb.append(System.lineSeparator());
+  }
+
+  public static void onTestStarted() {
+    var factory = getTestLoggerFactory();
+    if (factory != null) {
+      factory.clearLogBuffer();  // clear buffer from tests which failed to report their termination properly
+      factory.myTestStartedMillis = System.currentTimeMillis();
+    }
   }
 
   /**
@@ -213,30 +256,58 @@ public final class TestLoggerFactory implements Logger.Factory {
     onTestFinished(success, description.getDisplayName());
   }
 
+  /**
+   * @param testName used for the log file name
+   */
+  public static void onTestFinished(boolean success, @NotNull String testName) {
+    var factory = getTestLoggerFactory();
+    if (factory != null) {
+      factory.myTestStartedMillis = 0;
+      factory.dumpLogBuffer(success, testName);
+    }
+    LogToStdoutJulHandler.flushAllInstances();
+  }
+
   public static void logTestFailure(@NotNull Throwable t) {
-    if (shouldSplitTestLogs()) {
-      log(LogLevel.ERROR.toString(), "Test framework", "Test failed", t);
+    var factory = getTestLoggerFactory();
+    if (factory != null) {
+      String comparisonFailures = dumpComparisonFailures(t);
+      String message = comparisonFailures != null ? "test failed: " + comparisonFailures : "Test failed";
+
+      factory.buffer(LogLevel.ERROR, "#TestFramework", message, t);
     }
   }
 
-  /**
-   * Invoke this method instead of {@link #onTestFinished(boolean)} to support separate logs saving
-   *
-   * @param testName - going to be used for the log file name
-   */
-  public static void onTestFinished(boolean success, @NotNull String testName) {
-    String buffer;
-    synchronized (BUFFER) {
-      buffer = BUFFER.length() != 0 && !success ? BUFFER.toString() : null;
-      BUFFER.setLength(0);
+  private void clearLogBuffer() {
+    synchronized (myBuffer) {
+      myBuffer.setLength(0);
     }
+  }
+
+  private void dumpLogBuffer(boolean success, String testName) {
+    String buffer;
+    synchronized (myBuffer) {
+      buffer = success || myBuffer.length() == 0 ? null : myBuffer.toString();
+      myBuffer.setLength(0);
+    }
+
     if (buffer != null) {
-      if (shouldSplitTestLogs()) {
-        buffer = saveSplitLog(testName, buffer);
+      if (mySplitTestLogs) {
+        var logDir = getTestLogDir().resolve(SPLIT_LOGS_SUBDIR);
+        var logFile = FileUtil.findSequentNonexistentFile(logDir.toFile(), FileUtil.sanitizeFileName(testName), "log").toPath();
+        try {
+          Files.createDirectories(logDir);
+          Files.writeString(logFile, buffer);
+          buffer = "Log saved to: " + logFile.getFileName() + " (" + logFile + ')';
+        }
+        catch (IOException e) {
+          buffer += "\nError writing split log, disabling splitting: " + logFile + '\n' + e;
+          mySplitTestLogs = false;
+        }
       }
 
       if (System.getenv("TEAMCITY_VERSION") != null) {
-        // print in several small statements to avoid service messages tearing causing this fold to expand
+        // printing in several small statements to avoid service messages tearing, causing this fold to expand
         // using .out instead of .err by the advice from Nikita Skvortsov
         System.out.flush();
         System.out.println("##teamcity[blockOpened name='DEBUG log']");
@@ -248,7 +319,7 @@ public final class TestLoggerFactory implements Logger.Factory {
       }
       else {
         // mark each line in IDEA console with this hidden mark to be able to fold it automatically
-        List<String> lines = LineTokenizer.tokenizeIntoList(buffer, false, false);
+        var lines = LineTokenizer.tokenizeIntoList(buffer, false, false);
         if (!lines.get(0).startsWith("\n")) lines.set(0, "\n" + lines.get(0));
         System.err.println(String.join(FAILED_TEST_DEBUG_OUTPUT_MARKER + "\n", lines));
       }
@@ -278,5 +349,167 @@ public final class TestLoggerFactory implements Logger.Factory {
         onTestStarted();
       }
     };
+  }
+
+  static final class TestLoggerAssertionError extends AssertionError {
+    private TestLoggerAssertionError(String message, Throwable cause) {
+      super(message, cause);
+    }
+  }
+
+  private static final class TestLogger extends JulLogger {
+    private final TestLoggerFactory myFactory;
+
+    private TestLogger(@NotNull java.util.logging.Logger julLogger, @NotNull TestLoggerFactory factory) {
+      super(julLogger);
+      myFactory = factory;
+    }
+
+    @Override
+    public void error(String message, @Nullable Throwable t, String @NotNull ... details) {
+      var actions = LoggedErrorProcessor.getInstance().processError(myLogger.getName(), requireNonNullElse(message, ""), details, t);
+
+      if (actions.contains(LoggedErrorProcessor.Action.LOG)) {
+        if (t instanceof TestLoggerAssertionError && message.equals(t.getMessage()) && details.length == 0) {
+          throw (TestLoggerAssertionError)t;
+        }
+
+        message = message + DefaultLogger.detailsToString(details) + DefaultLogger.attachmentsToString(t);
+        t = ensureNotControlFlow(t);
+
+        if (myFactory.mySplitTestLogs) {
+          myFactory.buffer(LogLevel.ERROR, myLogger.getName(), message, t);
+        }
+
+        super.info(message, t);
+      }
+
+      if (actions.contains(LoggedErrorProcessor.Action.STDERR)) {
+        DefaultLogger.dumpExceptionsToStderr(message, t);
+      }
+
+      if (actions.contains(LoggedErrorProcessor.Action.RETHROW)) {
+        throw new TestLoggerAssertionError(message, t);
+      }
+    }
+
+    @Override
+    public void warn(String message, @Nullable Throwable t) {
+      if (LoggedErrorProcessor.getInstance().processWarn(myLogger.getName(), requireNonNullElse(message, ""), t)) {
+        message += DefaultLogger.attachmentsToString(t);
+        t = ensureNotControlFlow(t);
+
+        if (myFactory.mySplitTestLogs) {
+          myFactory.buffer(LogLevel.WARNING, myLogger.getName(), message, t);
+        }
+
+        super.warn(message, t);
+      }
+    }
+
+    @Override
+    public void info(String message) {
+      info(message, null);
+    }
+
+    @Override
+    public void info(String message, @Nullable Throwable t) {
+      super.info(message, t);
+      myFactory.buffer(LogLevel.INFO, myLogger.getName(), message, t);
+    }
+
+    @Override
+    public void debug(String message) {
+      debug(message, (Throwable)null);
+    }
+
+    @Override
+    public void debug(@Nullable Throwable t) {
+      debug(null, t);
+    }
+
+    @Override
+    public void debug(String message, @Nullable Throwable t) {
+      if (isDebugEnabled()) {
+        super.debug(message, t);
+        myFactory.buffer(LogLevel.DEBUG, myLogger.getName(), message, t);
+      }
+    }
+
+    @Override
+    public void trace(String message) {
+      if (isTraceEnabled()) {
+        super.trace(message);
+        myFactory.buffer(LogLevel.TRACE, myLogger.getName(), message, null);
+      }
+    }
+
+    @Override
+    public void trace(@Nullable Throwable t) {
+      if (isTraceEnabled()) {
+        super.trace(t);
+        myFactory.buffer(LogLevel.TRACE, myLogger.getName(), null, t);
+      }
+    }
+
+    @Override
+    public boolean isDebugEnabled() {
+      return !Accessor.isInStressTest() || super.isDebugEnabled();
+    }
+
+    /**
+     * Calling {@link com.intellij.openapi.application.ex.ApplicationManagerEx#isInStressTest} reflectively to avoid dependency on a platform module
+     */
+    private static class Accessor {
+      private static final @Nullable MethodHandle isInStressTest = getMethodHandle();
+
+      private static MethodHandle getMethodHandle() {
+        try {
+          var clazz = Class.forName("com.intellij.openapi.application.ex.ApplicationManagerEx");
+          return MethodHandles.publicLookup().findStatic(clazz, "isInStressTest", MethodType.methodType(boolean.class));
+        }
+        catch (ReflectiveOperationException e) {
+          e.printStackTrace();
+          return null;
+        }
+      }
+
+      private static boolean isInStressTest() {
+        try {
+          return isInStressTest != null && (boolean)isInStressTest.invokeExact();
+        }
+        catch (Throwable ignored) {
+          return false;
+        }
+      }
+    }
+  }
+
+  private static class LogToStdoutJulHandler extends StreamHandler {
+    private static final @NotNull WeakList<LogToStdoutJulHandler> ourInstances = new WeakList<>();
+
+    LogToStdoutJulHandler() {
+      super(System.out, new WithTimeSinceTestStartedJulFormatter());
+      setLevel(Level.ALL);
+      ourInstances.add(this);
+    }
+
+    static void flushAllInstances() {
+      for (LogToStdoutJulHandler instance : ourInstances) {
+        instance.flush();
+      }
+    }
+  }
+
+  private static class WithTimeSinceTestStartedJulFormatter extends IdeaLogRecordFormatter {
+    WithTimeSinceTestStartedJulFormatter() {
+      super(false);
+    }
+
+    @Override
+    protected long getStartedMillis() {
+      TestLoggerFactory factory = getTestLoggerFactory();
+      return factory == null ? 0L : factory.myTestStartedMillis;
+    }
   }
 }
